@startuml

title __STRUCTURECODE's Class Diagram__\n

  namespace ExamReviewer {
    namespace Analysis {
      namespace StructureCode {
        class ExamReviewer.Analysis.StructureCode.AnalyzeStructure1Code1Item {
            - halfWayGrade : double[]
            + AnalyzeContent()
            - analyzeFor()
            - analyzeIf()
            - analyzeWhile()
            - calculateHalfWayGrade()
        }
      }
    }
  }
  

  namespace ExamReviewer {
    namespace Analysis {
      namespace StructureCode {
        class ExamReviewer.Analysis.StructureCode.AnalyzeStructure1StudentNItems {
            + AnalizedContent()
            + AnalyzeStructure1StudentNItems()
        }
      }
    }
  }
  

  ExamReviewer.Analysis.StructureCode.AnalyzeStructure1Code1Item -up-|> ExamReviewer.Analysis.Analyze1Code1Item
  ExamReviewer.Analysis.StructureCode.AnalyzeStructure1StudentNItems -up-|> ExamReviewer.Analysis.Analyze1StudentNItem


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
